k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prod-librc2d-frontend-service
  namespace: prod-librc2d-frontend
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: prod-librc2d-frontend
